--- a/app/views/manage-groups.html
+++ b/app/views/manage-groups.html
@@ -1,7 +1,7 @@
 <div class="list-group">
     <a ui-sref="app.manage.members({id: group.id})" class="list-group-item"
-       ng-repeat="group in manageGroups.groups">
+       ng-repeat="group in state.groups">
         <span class="pull-right"><i class="fa fa-angle-right"></i></span>
-        {{group.name}}
+        {{group.name}}-{{say()}}
     </a>
 </div>
