--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="row page-main">
     <img src="images/BlameRave%20Logo.svg" />
-    <h4>Welcome {{main.fullname}}</h4>
+    <h4>Welcome {{state.name}}</h4>
     <p>
         <a ui-sref="app.manage.groups" class="btn btn-default btn-lg btn-block">Manage</a>
         <small>(Teachers, babysitters, coaches, doggy day care, ...)</small>
