--- a/app/views/manage-groups.html
+++ b/app/views/manage-groups.html
@@ -2,6 +2,6 @@
     <a ui-sref="app.manage.members({id: group.id})" class="list-group-item"
        ng-repeat="group in state.groups">
         <span class="pull-right"><i class="fa fa-angle-right"></i></span>
-        {{group.name}}-{{say()}}
+        {{group.name}}
     </a>
 </div>
