--- a/app/views/manage-members.html
+++ b/app/views/manage-members.html
@@ -1,6 +1,6 @@
 <div class="list-group">
     <a ui-sref="app" class="list-group-item"
-       ng-repeat="member in getMembersForGroup(params.id)">
+       ng-repeat="member in state">
         {{member.name}}
     </a>
 </div>
